package edu.uees.tutorias.domain;

public class Docente extends Usuario {
    public Docente(String id, String nombre) {
        super(id, nombre);
    }
}
